--- a/smevo-nginx/smevo.conf
+++ b/smevo-nginx/smevo.conf
@@ -4,6 +4,20 @@ server {
         index index.html;
         #error_log /var/log/nginx/error.log debug;
 
+location /portainer/ {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+        rewrite /portainer/(.*) /$1 break;
+        proxy_pass         http://portainer:9000;
+}
+location /adminer/ {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+        rewrite /portainer/(.*) /$1 break;
+        proxy_pass         http://adminer:9000;
+}
+
+
         location /socket.io/ {
                 proxy_pass http://node:3003;
                 proxy_http_version 1.1;
